--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
           <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
           <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
           <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
-          <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
-          <!-- <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Services</span></a></li> -->
+<!--           <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li> -->
+<!--           <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Services</span></a></li> -->
           <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
         </ul>
       </nav><!-- .nav-menu -->
@@ -101,7 +101,7 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>19th Jan, 1995</span></li>
+<!--                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>19th Jan, 1995</span></li> -->
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+91 7678628455</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Faridabad, Haryana, India</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>https://kumudkishor1901.github.io/Resume/</span></li>
@@ -109,7 +109,7 @@
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>28</span></li>
+<!--                   <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>28</span></li> -->
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>kumudkishor1901@gmail.com</span></li>
                   <!-- <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li> -->
@@ -195,14 +195,14 @@
             </div>
 
             <div class="progress">
-              <span class="skill">HTML <i class="val">90%</i></span>
+              <span class="skill">SpringBoot <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">CSS <i class="val">75%</i></span>
+              <span class="skill">MySQL <i class="val">75%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -213,25 +213,25 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
 
             <div class="progress">
-              <span class="skill">JavaScript <i class="val">60%</i></span>
+              <span class="skill">HTML/CSS <i class="val">60%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">SpringBoot <i class="val">70%</i></span>
+              <span class="skill"> JavaScript<i class="val">70%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
-            <div class="progress">
+<!--             <div class="progress">
               <span class="skill">MVC <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
-            </div>
+            </div> -->
 
           </div>
 
@@ -284,7 +284,7 @@
           </div>
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Professional Experience</h3>
-            <div class="resume-item">
+<!--             <div class="resume-item">
               <h4>JNS Infosoft Solutions-(Intern)</h4>
               <h5>Nov 2022 - Feb 2023</h5>
               <p><em>Faridabad</em></p>
@@ -293,7 +293,7 @@
                   contribute to the development of cutting-edge products. My areas of interest includes Java and spring framework.</li>
                 
               </ul>
-            </div>
+            </div> -->
             <div class="resume-item">
               <h4>Rudra HVAC Engineering-(Freelance)</h4>
               <h5>2022</h5>
